--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    
+<link rel="stylesheet" href="index.html.css">
 <link rel="stylesheet" href="/css/style.css">
 
     <title>AXN Creative</title>
@@ -90,6 +91,7 @@
 </footer>
     <!-- Scripts-->
     
+<script src="index.html.js"></script>
 <script src="/js/index.js"></script>
 
 </body>
