--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
         <source src='/css/images/axn-creative-web-video.MOV' type="video/mp4">
     </video>
 </div>
+<script>
+    // Get the video
+    var video = document.getElementById("myVideo");
+    video.playbackRate = 0.7;
+</script>
     
     <!-- Navigation -->
     <div class="nav">
